Contrast issues

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -9,7 +9,7 @@
     li a {
       padding-left: 5rem;
       text-decoration: none;
-      color: #000;
+      color: $text-color;
     }
   }
 
