--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 .navbar ul li a {
   padding-left: 5rem;
   text-decoration: none;
-  color: #000;
+  color: #ECE9E4;
 }
 
 .navbar .profile {
